--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -255,6 +255,135 @@ header {
     align-items: center;
 }
 
+.modalb2 {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+    display: none;
+}
+
+.hint-box {
+    position: fixed;
+    width: 750px;
+    height: 300px;
+    background-color: #fff;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hint-text {
+    width: 750px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#modal4:checked~.modalb2 {
+    display: block;
+}
+
+.box6 > label {
+    cursor: pointer;
+}
+
+.modalb5 {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+    display: none;
+}
+
+.ex-box {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 700px;
+    height: 300px;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ex-text {
+    width: 700px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#modal5:checked~.modalb5 {
+    display: block;
+}
+
+.box7 > input {
+    display: none;
+}
+
+.box7 > label {
+    cursor: pointer;
+}
+
+.modalb6 {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+    display: none;
+}
+
+.review-box {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 900px;
+    height: 500px;
+    background-color: #fff;
+}
+
+.review-header {
+    width: 700px;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.review-text {
+    width: 800px;
+    height: 400px;
+}
+
+#modal6:checked~.modalb6 {
+    display: block;
+}
+
+.box9 > input {
+    display: none;
+}
+
 /* nav 영역 */
 nav {
     width: 100%;
