--- a/kakao/style.css
+++ b/kakao/style.css
@@ -71,6 +71,20 @@ nav > ul > li {
     height: 800px;
 }
 
+.window {
+    width: 1200px;
+    height: 800px;
+    overflow: hidden;
+}
+
+.slides {
+    position: relative;
+    width: 3600px;
+    height: 800px;
+    display: flex;
+    animation: 3s slide infinite linear;
+}
+
 .box > img {
     width: 100%;
     height: 100%;
