--- a/kakao/style.css
+++ b/kakao/style.css
@@ -182,11 +182,10 @@ nav > ul > li {
     height: 250px;
     margin-top: 15px;
     border-radius: 10px;
-    box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.6);
 }
 
 .item2 > img:hover {
-    box-shadow: none;
+    box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.6);
     transition: all 0.4s;
 }
 
@@ -208,6 +207,23 @@ nav > ul > li {
 .left {
     width: 50%;
     flex-direction: column;
+}
+
+.item3 {
+    width: 600px;
+    height: 300px;
+    border-radius: 20px;
+}
+
+.item3 > img {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
+
+.item3 > img:hover {
+    box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.6);
+    transition: all 0.3s;
 }
 
 .item4 {
