--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0 auto;
-    padding: 0; 
+    padding: 0;
 }
 
 body li {
@@ -95,7 +95,7 @@ header {
 }
 
 .close1 {
-    display: none;    
+    display: none;
 }
 
 #modal3 {
@@ -108,7 +108,7 @@ header {
     height: 100%;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 1;
     display: none;
@@ -179,7 +179,7 @@ header {
     height: 100%;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 1;
     display: none;
@@ -192,7 +192,7 @@ header {
     background-color: #fff;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -220,7 +220,7 @@ header {
     height: 100%;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 1;
     display: none;
@@ -230,7 +230,7 @@ header {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     width: 700px;
     height: 300px;
     background-color: #fff;
@@ -263,7 +263,7 @@ header {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
@@ -275,7 +275,7 @@ header {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     width: 900px;
     height: 500px;
     background-color: #fff;
@@ -359,7 +359,7 @@ nav {
     line-height: 40px;
 }
 
-.box1 > input{
+.box1 > input {
     display: none;
 }
 
@@ -369,7 +369,7 @@ nav {
     height: 100%;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 999;
     display: none;
@@ -382,7 +382,7 @@ nav {
     background-color: #fff;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
 
 #modal1:checked~.modalb {
@@ -418,9 +418,10 @@ nav {
     font-weight: 900;
 }
 
-#modal1{
+#modal1 {
     display: none;
 }
+
 /* con1 영역 */
 .con1 {
     width: 100%;
@@ -436,8 +437,9 @@ nav {
     background-color: #A5ACE8;
 }
 
-.idiom > .idiom-main >  li {
+.idiom > .idiom-main > li {
     font-size: 70px;
+    transition: transform 0.5s ease-in-out;
 }
 
 .idiom > .idiom-main > button {
@@ -456,12 +458,13 @@ nav {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     width: 1200px;
     height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .icon {
@@ -501,4 +504,13 @@ nav {
 .idiom-text > p {
     font-size: 21px;
     font-weight: 900;
+}
+
+/* 슬라이드 기능 추가 */
+#prevSlide, #nextSlide {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 2em;
+    cursor: pointer;
 }
